<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:background="@color/colorWhite"
            android:id="@+id/clAppIconContainer">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/ivAppIconBg"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_app_icon_background"
                android:contentDescription="@string/cont_desc_app_icon_bg"
                style="@style/Theme.Aikon.ClickableBorderLess"
                />
            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/ivPickAppIcon"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_aikon_baseline_logo"
                android:contentDescription="@string/cont_desc_pick_app_icon"
                style="@style/Theme.Aikon.ClickableBorderLess"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPickIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clAppIconContainer"
            android:text="@string/msg_tap_to_pick_icon"
            android:layout_marginTop="3dp"
            android:textSize="10sp"
            android:textColor="?attr/colorVariantOp"
            />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:id="@+id/ivAppIconTooltip"
            app:layout_constraintStart_toEndOf="@id/tvPickIcon"
            app:layout_constraintTop_toTopOf="@id/tvPickIcon"
            app:layout_constraintBottom_toBottomOf="@id/tvPickIcon"
            android:layout_marginHorizontal="3dp"
            app:srcCompat="@drawable/ic_info"
            app:tint="?colorIconNormal"
            android:contentDescription="@string/msg_app_icon_tooltip"
            />

        <com.google.android.material.slider.Slider
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/sliderAppIconPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPickIcon"
            android:valueFrom="500.0"
            android:valueTo="800.0"
            android:stepSize="10.0"
            android:value="500.0"
            android:saveEnabled="false"
            android:contentDescription="@string/cont_desc_adjust_app_icon_padding"
            app:trackColor="?colorVariantXOp"
            app:trackColorActive="?colorPrimary"
            app:thumbColor="?colorTextMain"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvAppIconPadding"
            android:gravity="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sliderAppIconPadding"
            app:layout_constraintTop_toTopOf="@id/sliderAppIconPadding"
            app:layout_constraintBottom_toBottomOf="@id/sliderAppIconPadding"
            android:text="@string/title_padding"
            android:textSize="10sp"
            android:textColor="?attr/colorVariantOp"
            android:layout_marginEnd="3dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/btnPickIconBg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sliderAppIconPadding"
            android:text="@string/title_select_icon_background"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="10sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/iplAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/hint_enter_app_name"
            style="@style/Theme.Aikon.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPickIconBg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                style="@style/Theme.Aikon.TextInputEditTextRegular"
                android:text="@string/app_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="25"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/iplAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:saveEnabled="false"
            android:text="@string/title_adaptive_icon"
            tools:checked="true"
            android:id="@+id/switchAdaptiveIcon"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPreviewAppIcon"
            app:layout_constraintTop_toBottomOf="@id/switchAdaptiveIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/action_preview_app_icon"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            />

        <include
            android:id="@+id/includeAdView"
            layout="@layout/ad_mob_banner_ad_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            app:layout_constraintTop_toBottomOf="@id/btnPreviewAppIcon"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDonationApp"
            app:layout_constraintTop_toBottomOf="@id/includeAdView"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_get_donation_version"
            android:textColor="?colorTextMain"
            style="@style/Theme.Aikon.MaterialButtonOutlined"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPreviewAppNotification"
            app:layout_constraintTop_toBottomOf="@id/btnDonationApp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/action_preview_app_notification_icon"
            android:textColor="?colorTextMain"
            style="@style/Theme.Aikon.MaterialButtonOutlined"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_arrow_right"
            app:iconGravity="textEnd"
            app:iconTint="?colorTextMain"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>