<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgDedicated"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:textColor="#F49A3B"
            android:text="@string/msg_app_dedicated"
            android:textStyle="italic"
            android:paddingHorizontal="16dp"
            android:textSize="14sp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNameDedicated"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tvMsgDedicated"
            android:layout_marginTop="5dp"
            android:textColor="#F49A3B"
            android:text="@string/title_kurosaki_ichigo"
            android:textStyle="italic"
            android:paddingHorizontal="16dp"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:id="@+id/ivLogo"
            app:layout_constraintTop_toBottomOf="@id/tvNameDedicated"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:tint="?colorIconNormal"
            app:srcCompat="@drawable/ic_aikon_baseline_logo"
            android:contentDescription="@string/cont_desc_aikon_app_logo"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgAboutApp"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            android:layout_marginTop="15dp"
            android:textColor="?colorTextMain"
            android:text="@string/msg_about_app"
            android:paddingHorizontal="16dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMsgAboutUs"
            app:layout_constraintTop_toBottomOf="@id/tvMsgAboutApp"
            android:layout_marginTop="15dp"
            android:textColor="?colorTextMain"
            android:text="@string/msg_about_us"
            android:textColorLink="?colorVariantXOp"
            android:paddingHorizontal="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDonationApp"
            app:layout_constraintTop_toBottomOf="@id/tvMsgAboutUs"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_get_donation_version"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMoreApps"
            app:layout_constraintTop_toBottomOf="@id/btnDonationApp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_more_apps"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:icon="@drawable/ic_play_store"
            app:iconGravity="textEnd"
            app:iconTint="?colorTextSecondary"
            app:iconPadding="10dp"
            app:iconSize="20dp"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRateApp"
            app:layout_constraintTop_toBottomOf="@id/btnMoreApps"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_rate_aikon"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:icon="@drawable/ic_rate"
            app:iconGravity="textEnd"
            app:iconTint="?colorTextSecondary"
            app:iconPadding="10dp"
            app:iconSize="20dp"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShareApp"
            app:layout_constraintTop_toBottomOf="@id/btnRateApp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_share_aikon"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            app:icon="@drawable/ic_share"
            app:iconGravity="textEnd"
            app:iconTint="?colorTextSecondary"
            app:iconPadding="10dp"
            app:iconSize="20dp"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContact"
            app:layout_constraintTop_toBottomOf="@id/btnShareApp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="?colorButtonTint"
            android:textColor="?colorTextSecondary"
            style="@style/Theme.Aikon.MaterialButton"
            android:text="@string/email_publisher"
            app:cornerRadius="25dp"
            android:paddingHorizontal="30dp"
            android:textSize="12sp"
            app:icon="@drawable/ic_mail"
            app:iconGravity="textEnd"
            app:iconTint="?colorTextSecondary"
            app:iconPadding="10dp"
            app:iconSize="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>